src/objects/DraupChild__c.object
<CustomObject>
    <fields>
        <fullName>BudgetControl__c</fullName>
        <label>Budget Control</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactDetails__c</fullName>
        <label>Contact Details</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Dates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealSizeInfluence__c</fullName>
        <label>Deal Size Influence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DraupHeader__c</fullName>
        <label>DraupHeader</label>
        <referenceTo>DraupHeader__c</referenceTo>
        <relationshipName>DraupChild_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EngagementGuidelines__c</fullName>
        <label>Engagement Guidelines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExecutiveMovementTitle__c</fullName>
        <label>From Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecutiveName__c</fullName>
        <label>Executive Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headcount__c</fullName>
        <label>Headcount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Headquarters__c</fullName>
        <label>Headquarters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageLink__c</fullName>
        <label>Image Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KeyLocations__c</fullName>
        <label>Key Locations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KeySkillsHired__c</fullName>
        <label>Key Skills Hired</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KeySubVerticals__c</fullName>
        <label>Key Sub Verticals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KeyVendorsEngaged__c</fullName>
        <label>Key Vendors Engaged</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KeyVendors__c</fullName>
        <label>Key Vendors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LocationClass__c</fullName>
        <label>Location Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locations__c</fullName>
        <label>Locations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MovementDate__c</fullName>
        <label>Movement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunityIndex__c</fullName>
        <label>Opportunity Index</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonalityCharacteristics__c</fullName>
        <label>Personality Characteristics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RDSpendGrowth__c</fullName>
        <label>R&amp;D Spend Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RDSpend__c</fullName>
        <label>R&amp;D Spend</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StrategicDate__c</fullName>
        <label>Strategic Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrategicSignalTitle__c</fullName>
        <label>Strategic Signal Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubVerticalsAccount__c</fullName>
        <label>Account Sub Verticals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SubVerticalsLead__c</fullName>
        <label>Lead Sub Verticals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechStack__c</fullName>
        <label>TechStack</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_Title__c</fullName>
        <label>To Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopLocations__c</fullName>
        <label>Top Locations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopTitles__c</fullName>
        <label>Top Titles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TotalITWorkforce__c</fullName>
        <label>Total IT Workforce</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalRDWorkforce__c</fullName>
        <label>Total R&amp;D Workforce</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendors__c</fullName>
        <label>Vendors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>expOrder__c</fullName>
        <label>expOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DraupChild</label>
    <nameField>
        <displayFormat>DCH-{000000}</displayFormat>
        <label>DraupChild Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DraupChild</pluralLabel>
    <recordTypes>
        <fullName>Overview</fullName>
        <active>true</active>
        <label>Overview</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>